--- a/index.html
+++ b/index.html
@@ -126,69 +126,71 @@
             <span class="error"></span>
           </div>
         </div>
-        <div class="calculator__row row">
-          <div class="calculator__col col-sm-6 col-12">
-            <label for="myNormEkvi"
-              >Норма внесення ЕКВІНОКС®, л/га <span>*</span></label
-            >
-            <select name="normEkvi" id="myNormEkvi" class="require">
-              <option selected value="">Виберіть норму</option>
-              <option value="0.1" selected>0.1</option>
-              <option value="0.11">0.11</option>
-              <option value="0.12">0.12</option>
-            </select>
-            <span class="error"></span>
+        <div class="col-sm-12">
+          <div class="calculator__row row">
+            <div class="calculator__col col-sm-6 col-12">
+              <label for="myNormEkvi"
+                >Норма внесення ЕКВІНОКС®, л/га <span>*</span></label
+              >
+              <select name="normEkvi" id="myNormEkvi" class="require">
+                <option selected value="">Виберіть норму</option>
+                <option value="0.1" selected>0.1</option>
+                <option value="0.11">0.11</option>
+                <option value="0.12">0.12</option>
+              </select>
+              <span class="error"></span>
+            </div>
+            <div class="calculator__col col-sm-6 col-12">
+              <label for="myNorm"
+                >Норма внесення препарату на основі метрибузину, л (кг)/га</label
+              >
+              <input type="number" id="myNorm" readonly placeholder="0.00" />
+              <span class="error"></span>
+            </div>
           </div>
-          <div class="calculator__col col-sm-6 col-12">
-            <label for="myNorm"
-              >Норма внесення препарату на основі метрибузину, л (кг)/га</label
-            >
-            <input type="number" id="myNorm" readonly placeholder="0.00" />
-            <span class="error"></span>
+          <div class="calculator__row row">
+            <div class="calculator__col col-sm-6 col-12 text-center">
+              <label for="fieldArea">Площа поля, га <span>*</span></label>
+              <input
+                type="number"
+                id="fieldArea"
+                class="require"
+                placeholder="0.00"
+              />
+              <span class="error"></span>
+            </div>
           </div>
-        </div>
-        <div class="calculator__row row">
-          <div class="calculator__col col-sm-6 col-12 text-center">
-            <label for="fieldArea">Площа поля, га <span>*</span></label>
-            <input
-              type="number"
-              id="fieldArea"
-              class="require"
-              placeholder="0.00"
-            />
-            <span class="error"></span>
+          <div class="calculator__row row">
+            <div class="calculator__col col-sm-6 col-12">
+              <label for="myCostEkvi">Вартість обробки 1 га, $ (ЕКВІНОКС®)</label>
+              <input type="number" id="myCostEkvi" readonly placeholder="0.00" />
+            </div>
+            <div class="calculator__col col-sm-6 col-12">
+              <label for="myCost"
+                >Вартість обробки 1 га, $ (препарат на основі метрибузину)</label
+              >
+              <input type="number" id="myCost" readonly placeholder="0.00" />
+            </div>
           </div>
-        </div>
-        <div class="calculator__row row">
-          <div class="calculator__col col-sm-6 col-12">
-            <label for="myCostEkvi">Вартість обробки 1 га, $ (ЕКВІНОКС®)</label>
-            <input type="number" id="myCostEkvi" readonly placeholder="0.00" />
+          <div class="calculator__row row">
+            <div class="calculator__col col-sm-6 col-12">
+              <label for="myEconomy">Економія на 1 га, $</label>
+              <input type="number" id="myEconomy" readonly placeholder="0.00" />
+            </div>
+            <div class="calculator__col col-sm-6 col-12">
+              <label for="myEconomySec">Економія на Вашому полі, $</label>
+              <input
+                type="number"
+                id="myEconomySec"
+                readonly
+                placeholder="0.00"
+              />
+            </div>
           </div>
-          <div class="calculator__col col-sm-6 col-12">
-            <label for="myCost"
-              >Вартість обробки 1 га, $ (препарат на основі метрибузину)</label
-            >
-            <input type="number" id="myCost" readonly placeholder="0.00" />
-          </div>
-        </div>
-        <div class="calculator__row row">
-          <div class="calculator__col col-sm-6 col-12">
-            <label for="myEconomy">Економія на 1 га, $</label>
-            <input type="number" id="myEconomy" readonly placeholder="0.00" />
-          </div>
-          <div class="calculator__col col-sm-6 col-12">
-            <label for="myEconomySec">Економія на Вашому полі, $</label>
-            <input
-              type="number"
-              id="myEconomySec"
-              readonly
-              placeholder="0.00"
-            />
-          </div>
-        </div>
-        <div class="calculator__row row">
-          <div class="calculator__col col-sm-12 text-center">
-            <button class="btn">Очистити</button>
+          <div class="calculator__row row">
+            <div class="calculator__col col-sm-12 text-center">
+              <button class="btn">Очистити</button>
+            </div>
           </div>
         </div>
       </div>
