Виправлені орфографічні помилки в тексті

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         <div class="col-sm-12">
           <div class="calculator__title mb-3">
             Розрахуйте економію застосування препарату ЕКВІНОКС® у посівах сої у
-            порівнянні з іншим гербіцидом з діючею речовиною метрибузин (600 г/л
+            порівнянні з іншим гербіцидом з діючою речовиною метрибузин (600 г/л
             або 700 г/кг).
             <hr />
             Заповніть поля: вартість в $ без ПДВ одного літру або кг препарату
-            на основі метрибузину та кількість оброблюваних гектарів, оберить
+            на основі метрибузину та кількість оброблюваних гектарів, оберіть
             норму внесення л/га для препарату ЕКВІНОКС® з випадаючого списку.
             Калькулятор покаже економію!
           </div>
