--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <input type="number" id="myEconomy" readonly placeholder="0.00" />
             </div>
             <div class="calculator__col col-sm-6 col-12">
-              <label for="myEconomySec">Економія на Вашому полі, $</label>
+              <label for="myEconomySec">Економія на всьому полі, $</label>
               <input
                 type="number"
                 id="myEconomySec"
